Add dependency for test